--- a/src/components/Flipper/Flipper.module.scss
+++ b/src/components/Flipper/Flipper.module.scss
@@ -1,6 +1,6 @@
 @import '../../styles/abstract';
 
-$css-animations-duration: .8s;
+$css-animations-duration: 1.8s;
 
 .flipper {
   @include overlay;
@@ -21,7 +21,7 @@ $css-animations-duration: .8s;
   width: 100%;
   height: 100%;
   transform-style: preserve-3d;
-  transition: transform $css-animations-duration;
+  transition: transform $css-animations-duration cubic-bezier(0.175, 0.450, 0.190, 1.445);
   will-change: transform;
 }
 
@@ -36,7 +36,7 @@ $css-animations-duration: .8s;
 
   &:last-child {
     transform: rotateY(-180deg);
-    background: #666;
+    background: #333;
     transition: transform 0s $css-animations-duration;
 
     .isFlipped & {
