--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,11 +1,15 @@
 @import './abstract';
 @import './reset';
+@import './palette';
 
 *, *:after, *:before {
   box-sizing: border-box;
 }
 
 html {
-  background: #121212;
-  user-select: none;
+
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
