--- a/src/components/Flipper/Cell.module.scss
+++ b/src/components/Flipper/Cell.module.scss
@@ -15,9 +15,43 @@ $css-animations-duration: 1.4s;
 
   }
 
+  &.isHello {
+    animation: hello-animation $css-animations-duration/1.3;
+    transform-origin: center 85%;
+  }
+
   &.withoutAnimation {
     .cellSide {
       transform: none !important;
     }
+  }
+}
+
+@keyframes hello-animation {
+  $rotate: 15deg;
+  $scale: 1.6;
+
+  0% {
+    transform: scale(1) translate3d(0, 0, 0) rotate(0)
+  }
+
+  30% {
+    transform: scale(.8 * $scale) translate3d(0, 0, 0) rotate(0)
+  }
+
+  40% {
+    transform: scale($scale) translate3d(0, 0, 0) rotate(-$rotate)
+  }
+
+  55% {
+    transform: scale($scale) translate3d(0, 0, 0) rotate($rotate)
+  }
+
+  70% {
+    transform: scale($scale) translate3d(0, 0, 0) rotate(-$rotate)
+  }
+
+  100% {
+    transform: scale(1) translate3d(0, 0, 0) rotate(0)
   }
 }
