--- a/src/components/Flipper/Cell.module.scss
+++ b/src/components/Flipper/Cell.module.scss
@@ -16,8 +16,8 @@ $css-animations-duration: 1.4s;
   }
 
   &.isHello {
-    animation: hello-animation $css-animations-duration/1.3;
-    transform-origin: center 85%;
+    animation: hello-animation $css-animations-duration;
+    transform-origin: 48% 85%;
   }
 
   &.withoutAnimation {
@@ -28,22 +28,30 @@ $css-animations-duration: 1.4s;
 }
 
 @keyframes hello-animation {
-  $rotate: 15deg;
+  $rotate: 10deg;
   $scale: 1.6;
 
   0% {
     transform: scale(1) translate3d(0, 0, 0) rotate(0)
   }
 
-  30% {
+  20% {
     transform: scale(.8 * $scale) translate3d(0, 0, 0) rotate(0)
   }
 
-  40% {
+  30% {
     transform: scale($scale) translate3d(0, 0, 0) rotate(-$rotate)
   }
 
-  55% {
+  40% {
+    transform: scale($scale) translate3d(0, 0, 0) rotate($rotate)
+  }
+
+  50% {
+    transform: scale($scale) translate3d(0, 0, 0) rotate(-$rotate)
+  }
+
+  60% {
     transform: scale($scale) translate3d(0, 0, 0) rotate($rotate)
   }
 
