--- a/src/components/Cell/Cell.module.scss
+++ b/src/components/Cell/Cell.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/abstract';
 
 $css-animations-duration: 1.4s;
-$hello-animation-time: 1200;
+$hello-animation-time: 1400;
 
 :export {
   helloAnimationTime: $hello-animation-time
@@ -13,8 +13,6 @@ $hello-animation-time: 1200;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 24px;
-  font-weight: 800;
 }
 
 @keyframes hello-animation {
@@ -26,35 +24,39 @@ $hello-animation-time: 1200;
   }
 
   22% {
-    transform: scale(.8 * $scale) translate3d(0, 0, 0) rotate(0);
+    transform: scale(.8 * $scale) translate3d(0, -.1em, 0) rotate(0);
+    text-shadow: .2em .2em .115em rgba(0, 0, 0, .5);
   }
 
   34% {
-    transform: scale($scale) translate3d(0, 0, 0) rotate(-$rotate);
+    transform: scale($scale) translate3d(0, -.1em, 0) rotate(-$rotate);
+    text-shadow: .25em .25em .16em rgba(0, 0, 0, .3);
   }
 
   46% {
-    transform: scale($scale) translate3d(0, 0, 0) rotate($rotate);
+    transform: scale($scale) translate3d(0, -.1em, 0) rotate($rotate);
   }
 
   58% {
-    transform: scale($scale) translate3d(0, 0, 0) rotate(-$rotate);
+    transform: scale($scale) translate3d(0, -.1em, 0) rotate(-$rotate);
   }
 
   70% {
-    transform: scale($scale) translate3d(0, 0, 0) rotate($rotate);
+    transform: scale($scale) translate3d(0, -.1em, 0) rotate($rotate);
   }
 
-  84% {
-    transform: scale($scale) translate3d(0, 0, 0) rotate(-$rotate);
+  80% {
+    transform: scale($scale) translate3d(0, -.1em, 0) rotate(-$rotate);
     opacity: 1;
     filter: blur(0);
+    text-shadow: .25em .25em .16em rgba(0, 0, 0, .3);
   }
 
   100% {
-    transform: scale($scale) translate3d(0, 0, 0) rotate(0);
+    transform: scale(1) translate3d(0, 0, 0) rotate(0);
     filter: blur(10px);
     opacity: 0;
+    text-shadow: none
   }
 }
 
@@ -64,12 +66,12 @@ $hello-animation-time: 1200;
   @media screen and (max-width: 500px) {
     font-size: 24px;
   }
+}
 
-  &.cellHelloEmoji {
-    animation: hello-animation 1ms * $hello-animation-time forwards;
-    transform: scale(1) translate3d(0, 0, 0) rotate(0);
-    transform-origin: 48% bottom;
-  }
+.cellHelloEmoji {
+  animation: hello-animation 1ms * $hello-animation-time forwards;
+  transform: scale(1) translate3d(0, 0, 0) rotate(0);
+  transform-origin: 48% bottom;
 }
 
 .cellImage {
