--- a/src/components/Grid/Grid.module.scss
+++ b/src/components/Grid/Grid.module.scss
@@ -10,7 +10,7 @@ $minCellSize: 40px;
   background: linear-gradient(45deg, #321A4F, #16203A, #103234);
   min-width: 100%;
   min-height: 100%;
-  overflow: hidden;
+  //overflow: hidden;
 }
 
 .grid {
